--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
         <title>Document</title>
     </head>
     <body>
-        <input type="text" id="texttodo">
-        <button id="novotodo">Adicionar</button>
+        <div>
+            <input type="text" id="texttodo">
+            <button id="novotodo">Adicionar</button>
+        </div>
+        <div id="listtodo">
+        </div>
+
         <script src="./bundle.js"></script>
     </body>
 </html>
