classe usuario com extend - campo senha e isadmin

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     </head>
     <body>
         <div>
-            <input type="text" id="texttodo">
-            <button id="novotodo">Adicionar</button>
+            <input type="text" placeholder="email" id="email">
+            <input type="text" placeholder="senha" id="senha">
+            <label for="isAdmin">Is admin</label>
+            <input type="checkbox" id="isAdmin">
+            <button id="novo">Adicionar</button>
         </div>
-        <div id="listtodo">
+        <div id="list">
         </div>
 
         <script src="./bundle.js"></script>
